# fume

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: dev.yml  publish.yml
fume/: Cargo.toml
fume-core/: Cargo.toml
fume-core/src/: app.rs  lib.rs  player.rs  user.rs  util.rs
fume-core/src/app/: get_app_list.rs
fume-core/src/player/: get_steam_level.rs
fume-core/src/user/: get_friend_list.rs  get_player_summaries.rs  get_user_group_list.rs  resolve_vanity_url.rs
fume-core/src/util/: get_server_info.rs  get_supported_api_list.rs
fume-core/tests/: app.rs  player.rs  user.rs  util.rs
fume-core/tests/responses/: get_app_list.json  get_friend_list.json  get_player_summaries.json  get_server_info.json  get_steam_level.json  get_supported_apis.json  get_user_group_list.json  resolve_vanity_url_failure.json  resolve_vanity_url_success.json
fume/examples/: get_supported_api_list.rs
fume/src/: auth.rs  backend.rs  error.rs  lib.rs  steam.rs  user.rs
