[workspace]
resolver = "3"
members = ["fume", "fume-core"]

[workspace.dependencies]
fume-core = { version = "0.0.2", path = "fume-core" }
reqwest = { version = "0.13.3", features = ["query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
serde_json = "1.0.145"
thiserror = "2.0.18"
anyhow = "1.0.102"
tokio = { version = "1.48.0", features = ["full"] }
